--- a/README
+++ b/README
@@ -7,12 +7,8 @@ References
 Project
 + Similar to wireshark, I want to track individual connections and headers of
   these connections: IP, TCP headers and its payload
-+ After tracking connections, build a profile for each individual connection and
-  create a heuristic per connection
 
 Tasks
-+ Track bipartite connections
-+ Improve output screen when cancelling the sniffer
 + Log-format write to disk of all connections
 
 Done
@@ -21,3 +17,4 @@ Done
 + Print simple statistics of each connection
 + TCPDump for incoming packets: Offset, HEX and ASCII values
 + Collect each connections payload and save to a file or another data structure
++ Track bipartite connections A <-> B
