--- a/README
+++ b/README
@@ -9,7 +9,7 @@ Project
   these connections: IP, TCP headers and its payload
 
 Tasks
-+ Frame-level details
++ Fix frame clutter
 + TCP/IP-level details
 + Ethernet-level details
 
@@ -21,3 +21,4 @@ Done
 + Collect each connections payload and save to a file or another data structure
 + Track bipartite connections A <-> B
 + Log-format write to disk of all connections
++ Frame-level details
